--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-Welcome to Yan's Programming Portfolio
+        Welcome to <em>Yan's</em> Programming Portfolio
     </body>
 </html>
