--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Yan's Programming Portfolio</title>
     </head>
     <body>
-<img src="csc106.jpg">
-        Welcome to <em>Yan's</em> Programming Portfolio
+<img src="csc106.jpg"> <br>
+        Welcome to <em>Yan's</em> Programming Portfolio <br>
     </body>
 </html>
