--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
+        <h1> Yan's Website Information!</h1>
     </body>
 </html>
