--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <h1> Yan's Website Information!</h1>
+        <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
     </body>
 </html>
