--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <h1> Yan's Website Information!</h1>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
-<img src="csc106_buttons">
+        <table>
+            <tr>
+                <td><img src="csc106_buttons"></td>
+            </tr>
+        </table>
     </body>
 </html>
