--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
             <tr>
-                <td><img src="csc106_buttons"></td>
+                <td><img src="csc106_buttons.png"></td>
+                <td><img src="csc106_buttons2.png"></td>
+                <td><img src="csc106_buttons3.png"></td>
             </tr>
         </table>
     </body>
