--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <table>
             <tr>
                 <td> <a href="index.html" </a> <img src="csc106_buttons.png"></td>
-                <td><img src="csc106_buttons2.png"></td>
-                <td><img src="csc106_buttons3.png"></td>
+                <td> <a href="javascripts.html" </a> <img src="csc106_buttons2.png"></td>
+                <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
             </tr>
         </table>
     </body>
