--- a/about.html
+++ b/about.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Yan's Programming Portfolio Home Page</title>
+    </head>
+    <body>
+<img src="csc106.jpg"> <br>
+        Welcome to <em>Yan's</em> Programming Portfolio Home Page<br>
+        <h1> This is Yan's home page!</h1>
+    </body>
+</html>
