--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Yan's Programming Portfolio Home Page</title>
+        <title>Yan's Programming Portfolio About Page</title>
     </head>
     <body>
 <img src="csc106.jpg"> <br>
-        Welcome to <em>Yan's</em> Programming Portfolio Home Page<br>
-        <h1> This is Yan's home page!</h1>
+        Welcome to <em>Yan's</em> Programming Portfolio About Page<br>
+        <h1> This is Yan's about page!</h1>
     </body>
 </html>
