--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Yan's Programming Javascript</title>
+    </head>
+    <body>
+<img src="csc106.jpg"> <br>
+        Welcome to <em>Yan's</em> Programming Javascript <br>
+        <h1> Yan's Website Javascript Information!</h1>
+    </body>
+</html>
