--- a/javascripts.html
+++ b/javascripts.html
@@ -8,5 +8,12 @@
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Javascript <br>
         <h1> Yan's Website Javascript Information!</h1>
+        <table>
+            <tr>
+                <td> <a href="index.html" </a> <img src="csc106_buttons.png"></td>
+                <td> <a href="javascripts.html" </a> <img src="csc106_buttons2.png"></td>
+                <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
+            </tr>
+        </table>
     </body>
 </html>
