--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
-        <img src="yan.jpg" width=30>
+        <img src="yan.jpg" width="30">
         <h1> Yan's Website Information!</h1>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
