--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Yan's Programming Portfolio</title>
     </head>
     <body>
+        <background-img"myBackground">
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <img src="yan.jpg" width="300">
