--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
          {
-        background-img: url("myBackground");
+        background-image: url("myBackground");
         }
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
