--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Yan's Programming Portfolio</title>
     </head>
-    <body> 
-        {background-image: url("myBackground.jpg");
+    <body> {
+        background-image: url("myBackground.jpg");
         }
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
