--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8">
         <title>Yan's Programming Portfolio</title>
     </head>
-    <body> {
-        background-image: url("myBackground.jpg");
-        }
+    <body>
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <img src="yan.jpg" width="300">
