--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
             <tr>
-                <td> <a href="index.html" </a> <img src="csc106_buttons.png"></td>
+                <td> <a href="index.html" </a> <img src="home.png"></td>
                 <td> <a href="javascripts.html" </a> <img src="csc106_buttons2.png"></td>
                 <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
             </tr>
