--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <table>
             <tr>
                 <td> <a href="index.html" </a> <img src="home.png"></td>
-                <td> <a href="javascripts.html" </a> <img src=""></td>
-                <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
+                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
     </body>
