--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <td> <a href="index.html" </a> <img src="home.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td> <a href="javascripts.html" </a> <img src=""></td>
                 <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
