--- a/javascripts.html
+++ b/javascripts.html
@@ -5,14 +5,15 @@
         <title>Yan's Programming Javascript</title>
     </head>
     <body>
+        <img src="csc106.jpg"> <br>
 <img src="csc106.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Javascript <br>
         <h1> Yan's Website Javascript Information!</h1>
         <table>
             <tr>
-                <td> <a href="index.html" </a> <img src="csc106_buttons.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="csc106_buttons2.png"></td>
-                <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
+                <td> <a href="index.html" </a> <img src="home.png"></td>
+                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
     </body>
