--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
         <h1> This is Yan's about page!</h1>
         <table>
             <tr>
-                <td> <a href="index.html" </a> <img src="csc106_buttons.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="csc106_buttons2.png"></td>
-                <td> <a href="about.html" </a> <img src="csc106_buttons3.png"></td>
+               <td> <a href="index.html" </a> <img src="home.png"></td>
+                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
     </body>
