--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Yan's Programming Portfolio</title>
     </head>
     <body>
-<img src="csc106.jpg"> <br>
+<img src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <img src="yan.jpg" width="300">
         <h1> Yan's Website Information!</h1>
