--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <title>Yan's Programming Portfolio About Page</title>
     </head>
     <body>
-<img src="csc106.jpg"> <br>
+<img src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio About Page<br>
         <h1> This is Yan's about page!</h1>
         <table>
