--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
         <title>Yan's Programming Javascript</title>
     </head>
     <body>
-<img src="myBanner.jpg"> <br>
+<img src=""> <br>
         Welcome to <em>Yan's</em> Programming Javascript <br>
         <h1> Yan's Website Javascript Information!</h1>
         <table>
