--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Yan's Programming Portfolio</title>
     </head>
     <body>
-<img src="myBanner.jpg"> <br>
+<img src=""> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <h1> Yan's Website Information!</h1>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
