--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img src="myBanner.jpg" class="center"> <br>
+<img src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio <br>
         <h1> Yan's Website Information!</h1>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
