--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8">
         <title>Yan's Programming Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            h1 {text-align: center;}
     </head>
     <body>
-<img src="myBanner.jpg" margin-right="400 px"> <br>
-        Welcome to <em>Yan's</em> Programming Portfolio <br>
+<img src="myBanner.jpg"> <br>
+        <h1> Welcome to <em>Yan's</em> Programming Portfolio <br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
             <tr>
@@ -16,6 +18,6 @@
                 <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
-        <h1> Yan's Website Information!</h1>
+        <h2> Yan's Website Information!</h1>
     </body>
 </html>
