--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             h1 {text-align: center;}
+        </style>
     </head>
     <body>
 <img src="myBanner.jpg"> <br>
