--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 <img src="myBanner.jpg"> <br>
-        <h1> Welcome to <em>Yan's</em> Programming Portfolio <br>
+        <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
             <tr>
@@ -19,6 +19,6 @@
                 <td> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
-        <h2> Yan's Website Information!</h1>
+        <h2> Yan's Website Information!</h2>
     </body>
 </html>
