--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="style.css">
         <style>
             h1 {text-align: center;}
+            #banner {align: center;}
         </style>
     </head>
     <body>
-<img src="myBanner.jpg"> <br>
+<img src="myBanner.jpg" id="banner"> <br>
         <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
