--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             h1 {text-align: center;}
-            #banner {align: center;}
+            #banner {text-align: center;}
         </style>
     </head>
     <body>
