--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="style.css">
         <style>
             h1 {text-align: center;}
-            #banner {image-align: center;}
+            #banner {
+                margin-left: auto;
+                margin-right: auto;
+            }
         </style>
     </head>
     <body>
