--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             h1 {text-align: center;}
-            #banner {
+            img #banner {
                 margin-left: auto;
                 margin-right: auto;
             }
