--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img src="myBanner.jpg" class=center id="banner"> <br>
         <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
-        <table>
+        <table id="nav-table">
             <tr>
                 <td> <a href="index.html" </a> <img src="home.png"></td>
                 <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
