--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table id="nav-table">
             <tr>
-                <td> <a href="index.html" </a> <img src="home.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
-                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
+                <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
+                <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
         <h2> Yan's Website Information!</h2>
