--- a/about.html
+++ b/about.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Yan's Programming Portfolio About Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 <img src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio About Page<br>
         <h1> This is Yan's about page!</h1>
-        <table>
+       <table>
             <tr>
-               <td> <a href="index.html" </a> <img src="home.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
-                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
+                <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
+                <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
     </body>
