--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img src="myBanner.jpg" class=center id="banner"> <br>
+<img src="myBanner.jpg" id="banner"> <br>
         <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
-        <table id="nav-table">
+        <table>
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
                 <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
