--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img src="myBanner.jpg" id="banner"> <br>
+<img src="myBanner.jpg"> <br>
         <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
         <p> This website belongs to Yan, a current CSC 106 student! Below are a few useful links </p>
         <table>
