--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Yan's Programming Javascript</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 <img src="myBanner.jpg"> <br>
@@ -10,9 +11,9 @@
         <h1> Yan's Website Javascript Information!</h1>
         <table>
             <tr>
-                <td> <a href="index.html" </a> <img src="home.png"></td>
-                <td> <a href="javascripts.html" </a> <img src="javascript.png"></td>
-                <td> <a href="about.html" </a> <img src="aboutme.png"></td>
+                <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
+                <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
     </body>
