--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img src="myBanner.jpg"> <br>
+<img id="my-banner" src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Portfolio About Page<br>
         <h1> This is Yan's about page!</h1>
        <table>
