--- a/javascripts.html
+++ b/javascripts.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img src="myBanner.jpg"> <br>
+<img id="my-banner" src="myBanner.jpg"> <br>
         Welcome to <em>Yan's</em> Programming Javascript <br>
         <h1> Yan's Website Javascript Information!</h1>
         <table>
