--- a/javascripts.html
+++ b/javascripts.html
@@ -6,8 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img id="my-banner" src="myBanner.jpg"> <br>
-        Welcome to <em>Yan's</em> Programming Javascript <br>
+<img id="my-banner" src="myBanner.jpg">
         <h1> Yan's Website Javascript Information!</h1>
         <table>
             <tr>
