--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img id="my-banner" src="myBanner.jpg"> <br>
-        Welcome to <em>Yan's</em> Programming Portfolio About Page<br>
+<img id="my-banner" src="myBanner.jpg">
         <h1> This is Yan's about page!</h1>
        <table>
             <tr>
