--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <img id="my-banner" src="myBanner.jpg">
-        <h1> This is Yan's about page!</h1>
+        <h1> Welcome To <em>Yan's</em> About Page!</h1>
        <table>
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
