--- a/javascripts.html
+++ b/javascripts.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <img id="my-banner" src="myBanner.jpg">
-        <h1> Yan's Website Javascript Information!</h1>
+        <h1> Welcome To <em>Yan's</em> Javascript Page!</h1>
         <table>
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
