--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 <img id="my-banner" src="myBanner.jpg"> <br>
         <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
-        <table>
+        <table id="nav-table">
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
                 <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
