--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
     <body>
 <img id="my-banner" src="myBanner.jpg">
         <h1> Welcome To <em>Yan's</em> Javascript Page!</h1>
-        <table>
+        <table id="nav-table">
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
                 <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
