--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img id="my-banner" src="myBanner.jpg"> <br>
-        <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1><br>
+<img id="my-banner" src="myBanner.jpg">
+        <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1>
         <table id="nav-table">
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
