--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
             </tr>
         </table>
         <h2> Yan's Website Information!</h2>
+        <p id="web-info">
+            This website is owned by Yan, a current CSC 106 student. This website is the Home page and will have links to all the other pages owned by Yan.
+            This website will be updated throughout the course, and will eventually be a completed portfolio by the end. </p>
     </body>
 </html>
