--- a/about.html
+++ b/about.html
@@ -15,5 +15,8 @@
                 <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
+       <p id="web-info">
+           Hello, my name is Yan, and I'm a freshman at URI, I enjoy playing video games, watching shows, and hanging out with my friends. My favorite foods 
+           is probably sushi, pizza, and steak. I love watching sports, especially college football and the NFL. My favorite team is the Patriots.
     </body>
 </html>
