--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                 <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
+        <h2> About Me </h2>
        <p id="web-info">
            Hello, my name is Yan, and I'm a freshman at URI, I enjoy playing video games, watching shows, and hanging out with my friends. My favorite foods 
            is probably sushi, pizza, and steak. I love watching sports, especially college football and the NFL. My favorite team is the Patriots.
