--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        background-image: url("background.jpg");
 <img id="my-banner" src="myBanner.jpg">
         <h1> Welcome To <em>Yan's</em> About Page!</h1>
        <table id="nav-table">
