--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Yan's Programming Portfolio About Page</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                background-image: url('background.jpg');
+            }
+        </style>
     </head>
     <body>
 <img id="my-banner" src="myBanner.jpg">
