--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
         </table>
         <h2> About Me! </h2>
        <p id="web-info">
+           <img src="yan.jpg">
+           <img src="yan2.jpg">
+           <img src="football.jpg">
+           <img src="basketball.jpg">
            Hello, my name is Yan, and I'm a freshman at URI, I enjoy playing video games, watching shows, and hanging out with my friends. My favorite foods 
            is probably sushi, pizza, and steak. I love watching sports, especially college football and the NFL. My favorite team is the Patriots.
     </body>
