--- a/about.html
+++ b/about.html
@@ -8,6 +8,22 @@
             body {
                 background-image: url('background.jpg');
             }
+            #yan-1 {
+                width: 100px;
+                float: left;
+            }
+            #yan-2 {
+                width: 100px;
+                float: right;
+            }
+            #my-football {
+                width: 100px;
+                float: left;
+            }
+            #my-basketball {
+                width: 100px;
+                float: right;
+            }
         </style>
     </head>
     <body>
@@ -22,10 +38,10 @@
         </table>
         <h2> About Me! </h2>
        <p id="web-info">
-           <img src="yan.jpg">
-           <img src="yan2.jpg">
-           <img src="football.jpg">
-           <img src="basketball.jpg">
+           <img id="yan-1" src="yan.jpg">
+           <img id="yan-2" src="yan2.jpg">
+           <img id="my-football" src="football.jpg">
+           <img id="my-basketball" src="basketball.jpg">
            Hello, my name is Yan, and I'm a freshman at URI, I enjoy playing video games, watching shows, and hanging out with my friends. My favorite foods 
            is probably sushi, pizza, and steak. I love watching sports, especially college football and the NFL. My favorite team is the Patriots.
     </body>
