--- a/about.html
+++ b/about.html
@@ -19,10 +19,12 @@
             #my-football {
                 width: 150px;
                 float: left;
+                float: down;
             }
             #my-basketball {
                 width: 100px;
                 float: right;
+                float: down;
             }
         </style>
     </head>
