--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
             }
             #my-football {
                 width: 150px;
-                float: down;
+                float: left;
             }
             #my-basketball {
                 width: 100px;
-                float: down;
+                float: right;
             }
         </style>
     </head>
@@ -40,9 +40,9 @@
        <p id="web-info">
            <img id="yan-1" src="yan.jpg">
            <img id="yan-2" src="yan2.jpg">
-           <img id="my-football" src="football.jpg">
-           <img id="my-basketball" src="basketball.jpg">
            Hello, my name is Yan, and I'm a freshman at URI, I enjoy playing video games, watching shows, and hanging out with my friends. My favorite foods 
            is probably sushi, pizza, and steak. I love watching sports, especially college football and the NFL. My favorite team is the Patriots.
+           <img id="my-football" src="football.jpg">
+           <img id="my-basketball" src="basketball.jpg">
     </body>
 </html>
