--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
             #yan-1 {
                 width: 100px;
                 float: left;
+                margin-right: 10px;
             }
             #yan-2 {
                 width: 100px;
@@ -19,6 +20,7 @@
             #my-football {
                 width: 150px;
                 float: left;
+                margin-right: 10px;
             }
             #my-basketball {
                 width: 100px;
