--- a/javascripts.html
+++ b/javascripts.html
@@ -15,5 +15,8 @@
                 <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
             </tr>
         </table>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176">pan_dancing_bitmoji</a>
+        </h2><script src="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176/embed.js?editor=no&buttons=no&author=no&embed=yes">
+        </script>
     </body>
 </html>
