--- a/javascripts.html
+++ b/javascripts.html
@@ -18,5 +18,7 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176">pan_dancing_bitmoji</a>
         </h2><script src="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176/embed.js?editor=no&buttons=no&author=no&embed=yes">
         </script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984">pan_racing_bitmoji</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
