--- a/javascripts.html
+++ b/javascripts.html
@@ -20,5 +20,9 @@
         </script>
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984">pan_racing_bitmoji</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_dancingbitmojifun/5601411372466176">pan_dancingBitmojiFun</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/pan_dancingbitmojifun/5601411372466176/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480">pan_racingBitmojiFun</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
