--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Yan's Programming Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+<img id="my-banner" src="myBanner.jpg">
+        <h1> Welcome to <em>Yan's</em> Programming Portfolio </h1>
+        <table id="nav-table">
+            <tr>
+                <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
+                <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
+                <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
+            </tr>
+        </table>
+    </body>
+</html>
