--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
                 <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
                 <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
+                <td id="nav-td"> <a href="apps.html" </a> <img src="apps.png"></td>
             </tr>
         </table>
         <h2> About Me! </h2>
