--- a/javascripts.html
+++ b/javascripts.html
@@ -13,6 +13,7 @@
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
                 <td id="nav-td"> <a href="javascripts.html" </a> <img src="javascript.png"></td>
                 <td id="nav-td"> <a href="about.html" </a> <img src="aboutme.png"></td>
+                <td id="nav-td"> <a href="apps.html" </a> <img src="apps.png"></td>
             </tr>
         </table>
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176">pan_dancing_bitmoji</a>
