--- a/javascripts.html
+++ b/javascripts.html
@@ -16,14 +16,16 @@
                 <td id="nav-td"> <a href="apps.html" </a> <img src="apps.png"></td>
             </tr>
         </table>
-        <h3 id="dancing"><a href="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176">pan_dancing_bitmoji</a>
-        </h3><script src="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176/embed.js?editor=no&buttons=no&author=no&embed=yes">
+        <h2 id="dancing"><a href="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176">pan_dancing_bitmoji</a>
+        </h2><script src="https://www.khanacademy.org/computer-programming/pan_dancing_bitmoji/5704377341362176/embed.js?editor=no&buttons=no&author=no&embed=yes">
         </script>
-        <h3 id="racing><a href="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984">pan_racing_bitmoji</a></h3>
+        <h2 id="racing><a href="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984">pan_racing_bitmoji</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_racing_bitmoji/4539216685481984/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-        <h3 id="dancingFun><a href="https://www.khanacademy.org/computer-programming/pan_dancingbitmojifun/5601411372466176">pan_dancingBitmojiFun</a></h3>
+        <h2 id="dancingFun><a href="https://www.khanacademy.org/computer-programming/pan_dancingbitmojifun/5601411372466176">pan_dancingBitmojiFun</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_dancingbitmojifun/5601411372466176/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-        <h3 id="racingFun><a href="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480">pan_racingBitmojiFun</a></h3>
+        <h2 id="racingFun><a href="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480">pan_racingBitmojiFun</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_follow/5550796063686656">pan_Follow</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/pan_follow/5550796063686656/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
