--- a/javascripts.html
+++ b/javascripts.html
@@ -27,5 +27,7 @@
         <script src="https://www.khanacademy.org/computer-programming/pan_racingbitmojifun/5558048040468480/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_follow/5550796063686656">pan_Follow</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_follow/5550796063686656/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224">pan_decision</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
