--- a/javascripts.html
+++ b/javascripts.html
@@ -29,5 +29,6 @@
         <script src="https://www.khanacademy.org/computer-programming/pan_follow/5550796063686656/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224">pan_decision</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <a href="https://www.khanacademy.org/computer-programming/pan_zoo/6228744819228672" </a> <img src="bitmoji_zoo.png">
     </body>
 </html>
