--- a/javascripts.html
+++ b/javascripts.html
@@ -30,5 +30,6 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224">pan_decision</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/pan_decision/6468400693428224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
         <a href="https://www.khanacademy.org/computer-programming/pan_zoo/6228744819228672" </a> <img src="bitmoji_zoo.png">
+        <a href="https://www.khanacademy.org/computer-programming/pan_tag/5905544755331072" </a> <img src="pan_tagss.png">
     </body>
 </html>
