--- a/javascripts.html
+++ b/javascripts.html
@@ -32,5 +32,6 @@
         <a href="https://www.khanacademy.org/computer-programming/pan_zoo/6228744819228672" </a> <img src="bitmoji_zoo.png">
         <a href="https://www.khanacademy.org/computer-programming/pan_tag/5905544755331072" </a> <img src="pan_tagss.png">
         <a href="https://www.khanacademy.org/computer-programming/pan_contacts/5694976660389888" </a> <img src="pan_contacts.png">
+        <a href="https://www.khanacademy.org/computer-programming/pan_education/4627548857745408" </a> <img src="pan_education.png">
     </body>
 </html>
