--- a/javascripts.html
+++ b/javascripts.html
@@ -34,5 +34,6 @@
         <a href="https://www.khanacademy.org/computer-programming/pan_contacts/5694976660389888" </a> <img src="pan_contacts.png">
         <a href="https://www.khanacademy.org/computer-programming/pan_education/4627548857745408" </a> <img src="pan_education.png">
         <a href="https://www.khanacademy.org/computer-programming/pan_frogger/6337271023845376" </a> <img src="pan_frog.png">
+        <a href=”https://www.khanacademy.org/computer-programming/pan_memory/4954870855024640” </a> <img src=”pan_mem.png”>
     </body>
 </html>
