--- a/apps.html
+++ b/apps.html
@@ -16,5 +16,7 @@
                 <td id="nav-td"> <a href="apps.html" </a> <img src="apps.png"></td>
             </tr>
         </table>
+        <h2><a href="https://www.khanacademy.org/computer-programming/finished/5155553642332160">finished</a>
+        </h2><script src="https://www.khanacademy.org/computer-programming/finished/5155553642332160/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
