--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <img id="my-banner" src="myBanner.jpg">
-        <h1> Welcome to <em>Yan's</em> Apps Portfolio </h1>
+        <h1> CSC106 Final Project Page </h1>
         <table id="nav-table">
             <tr>
                 <td id="nav-td"> <a href="index.html" </a> <img src="home.png"></td>
