--- a/apps.html
+++ b/apps.html
@@ -16,7 +16,13 @@
                 <td id="nav-td"> <a href="apps.html" </a> <img src="apps.png"></td>
             </tr>
         </table>
+        Here is my final project, a working calculator app. With this app you can use it to help you solve any math problem you might face. From addition to subtraction,
+        to multiplication, and all the way to division. You simply click start, then you can use it just like any other calculator. You click a number, then choose
+        one of the math symbols, and then another number, then click equals, and then it'll give you your answer. You can also hit clear, to reset the calculator incase
+        you wanted to start over with a new math problem.
         <h2><a href="https://www.khanacademy.org/computer-programming/finished/5155553642332160">finished</a>
         </h2><script src="https://www.khanacademy.org/computer-programming/finished/5155553642332160/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_QudEMPFzQc" title="YouTube video player" frameborder="0" allow="accelerometer;
+         autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
